deployments/arr/sonarr/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 8989
      targetPort: sonarr
  selector:
    app: sonarr
    part-of: sonarr
